// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown accepts optgroup children 1`] = `
<ul
  class="ds-c-dropdown__menu"
  id="dropdown__menu--72"
  role="listbox"
>
  <li
    aria-labelledby="dropdown__button--69__group--0"
    class="ds-c-dropdown__menu-item-group"
    role="group"
  >
    <div
      class="ds-c-dropdown__menu-item-group-label"
      id="dropdown__button--69__group--0"
    >
      Group A
    </div>
    <ul
      role="presentation"
    >
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item ds-c-dropdown__menu-item--highlighted ds-c-dropdown__menu-item--selected"
        id="downshift-17-item-0"
        role="option"
      >
        <span
          class="ds-c-dropdown__menu-item-selected-indicator"
        >
          <svg
            aria-hidden="true"
            class="ds-c-icon ds-u-font-size--sm"
            focusable="false"
            id="icon-56"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M443.3 100.7c6.2 6.2 6.2 16.4 0 22.6l-272 272c-6.2 6.2-16.4 6.2-22.6 0l-144-144c-6.2-6.2-6.2-16.4 0-22.6s16.4-6.2 22.6 0L160 361.4l260.7-260.7c6.2-6.2 16.4-6.2 22.6 0z"
            />
          </svg>
        </span>
        Option A-1
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-17-item-1"
        role="option"
      >
        Option A-2
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-17-item-2"
        role="option"
      >
        Option A-3
      </li>
    </ul>
  </li>
  <li
    aria-labelledby="dropdown__button--69__group--1"
    class="ds-c-dropdown__menu-item-group"
    role="group"
  >
    <div
      class="ds-c-dropdown__menu-item-group-label"
      id="dropdown__button--69__group--1"
    >
      Group B
    </div>
    <ul
      role="presentation"
    >
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-17-item-3"
        role="option"
      >
        Option B-1
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-17-item-4"
        role="option"
      >
        Option B-2
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-17-item-5"
        role="option"
      >
        Option B-3
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Dropdown dropdown matches snapshot 1`] = `
<div
  class="ds-c-dropdown"
>
  <label
    class="ds-c-label"
    for="dropdown__button--1"
    id="dropdown__label--2"
  >
    <span
      class=""
    >
      Select an option
    </span>
  </label>
  <button
    aria-controls="dropdown__menu--4"
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-invalid="false"
    aria-labelledby="dropdown__button-content--3 dropdown__label--2"
    class="ds-c-dropdown__button ds-c-field"
    id="dropdown__button--1"
    name="dropdown"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="ds-u-truncate"
      id="dropdown__button-content--3"
    >
      2
    </span>
    <span
      class="ds-c-dropdown__caret"
    >
      <svg
        aria-hidden="true"
        class="ds-c-icon ds-u-font-size--sm"
        focusable="false"
        id="icon-2"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M212.7 148.7c6.2-6.2 16.4-6.2 22.6 0l160 160c6.2 6.2 6.2 16.4 0 22.6s-16.4 6.2-22.6 0L224 182.6 75.3 331.3c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l160-160z"
        />
      </svg>
    </span>
  </button>
  <div
    class="ds-c-dropdown__menu-container"
    hidden=""
  >
    <ul
      class="ds-c-dropdown__menu"
      id="dropdown__menu--4"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-0-item-0"
        role="option"
      >
        1
      </li>
      <li
        aria-selected="true"
        class="ds-c-dropdown__menu-item ds-c-dropdown__menu-item--selected"
        id="downshift-0-item-1"
        role="option"
      >
        <span
          class="ds-c-dropdown__menu-item-selected-indicator"
        >
          <svg
            aria-hidden="true"
            class="ds-c-icon ds-u-font-size--sm"
            focusable="false"
            id="icon-3"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M443.3 100.7c6.2 6.2 6.2 16.4 0 22.6l-272 272c-6.2 6.2-16.4 6.2-22.6 0l-144-144c-6.2-6.2-6.2-16.4 0-22.6s16.4-6.2 22.6 0L160 361.4l260.7-260.7c6.2-6.2 16.4-6.2 22.6 0z"
            />
          </svg>
        </span>
        2
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-0-item-2"
        role="option"
      >
        3
      </li>
      <li
        aria-selected="false"
        class="ds-c-dropdown__menu-item"
        id="downshift-0-item-3"
        role="option"
      >
        4
      </li>
    </ul>
  </div>
</div>
`;

exports[`Dropdown supports bottom placed error 1`] = `
<div>
  <div
    class="ds-c-dropdown"
  >
    <label
      class="ds-c-label"
      for="dropdown__button--29"
      id="dropdown__label--30"
    >
      <span
        class=""
      >
        Select an option
      </span>
    </label>
    <button
      aria-controls="dropdown__menu--32"
      aria-describedby="1_error"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-invalid="true"
      aria-labelledby="dropdown__button-content--31 dropdown__label--30"
      class="ds-c-dropdown__button ds-c-field ds-c-field--error"
      id="dropdown__button--29"
      name="dropdown"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <span
        class="ds-u-truncate"
        id="dropdown__button-content--31"
      >
        1
      </span>
      <span
        class="ds-c-dropdown__caret"
      >
        <svg
          aria-hidden="true"
          class="ds-c-icon ds-u-font-size--sm"
          focusable="false"
          id="icon-24"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M212.7 148.7c6.2-6.2 16.4-6.2 22.6 0l160 160c6.2 6.2 6.2 16.4 0 22.6s-16.4 6.2-22.6 0L224 182.6 75.3 331.3c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l160-160z"
          />
        </svg>
      </span>
    </button>
    <div
      class="ds-c-dropdown__menu-container"
      hidden=""
    >
      <ul
        class="ds-c-dropdown__menu"
        id="dropdown__menu--32"
        role="listbox"
      >
        <li
          aria-selected="true"
          class="ds-c-dropdown__menu-item ds-c-dropdown__menu-item--selected"
          id="downshift-7-item-0"
          role="option"
        >
          <span
            class="ds-c-dropdown__menu-item-selected-indicator"
          >
            <svg
              aria-hidden="true"
              class="ds-c-icon ds-u-font-size--sm"
              focusable="false"
              id="icon-25"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M443.3 100.7c6.2 6.2 6.2 16.4 0 22.6l-272 272c-6.2 6.2-16.4 6.2-22.6 0l-144-144c-6.2-6.2-6.2-16.4 0-22.6s16.4-6.2 22.6 0L160 361.4l260.7-260.7c6.2-6.2 16.4-6.2 22.6 0z"
              />
            </svg>
          </span>
          1
        </li>
      </ul>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="ds-c-inline-error ds-c-field__error-message ds-c-field__error-message--bottom"
      id="1_error"
    >
      <svg
        aria-hidden="true"
        class="ds-c-icon ds-c-icon--alert-circle "
        focusable="false"
        id="icon-26"
        viewBox="36 -12 186 186"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M162.18 41.592c-5.595-9.586-13.185-17.176-22.771-22.771-9.588-5.595-20.055-8.392-31.408-8.392-11.352 0-21.821 2.797-31.408 8.392-9.587 5.594-17.177 13.184-22.772 22.771-5.596 9.587-8.393 20.057-8.393 31.408 0 11.351 2.798 21.82 8.392 31.408 5.595 9.584 13.185 17.176 22.772 22.771 9.587 5.595 20.056 8.392 31.408 8.392s21.822-2.797 31.408-8.392c9.586-5.594 17.176-13.185 22.771-22.771C167.773 94.82 170.57 84.35 170.57 73c0-11.351-2.797-21.822-8.39-31.408zm-43.75 70.433c0 .761-.246 1.398-.734 1.914s-1.086.773-1.793.773H100.26c-.706 0-1.331-.271-1.874-.814-.543-.543-.814-1.168-.814-1.873V96.546c0-.706.271-1.331.814-1.874.543-.543 1.168-.814 1.874-.814h15.643c.707 0 1.306.258 1.793.773.488.518.734 1.154.734 1.915v15.479zm-.164-28.026c-.055.543-.339 1.019-.854 1.426-.517.407-1.154.61-1.914.61h-15.073c-.761 0-1.413-.203-1.956-.61-.543-.407-.815-.883-.815-1.426l-1.385-50.595c0-.653.271-1.141.814-1.467.544-.434 1.196-.652 1.956-.652h17.926c.761 0 1.412.217 1.955.652.543.326.813.815.813 1.467l-1.467 50.595z"
        />
      </svg>
      <span
        class="ds-u-visibility--screen-reader"
      >
        Error: 
      </span>
      Error
    </span>
  </div>
</div>
`;
